Fix CustomerGroupContextResolver to use TokenStorageInterface
- Changed from CustomerUserProvider to TokenStorageInterface for better token access
- Added detailed logging to debug authentication issues
- Updated services.yaml to inject security.token_storage
- Added comprehensive logging to DataProvider

Issue discovered: Even after login, the system uses AnonymousCustomerUserToken
with CustomerVisitor instead of authenticated CustomerUser

--- a/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
+++ b/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
@@ -10,6 +10,11 @@ services:
         exclude:
             - '../../{Entity,Resources,Migrations,Tests}'
             - '../../DependencyInjection/Configuration.php'
+    
+    # Repository service
+    Acme\Bundle\CustomerGroupInventoryBundle\Entity\Repository\CustomerGroupInventoryRepository:
+        tags:
+            - { name: doctrine.repository_service }
 
 
     # Providers
@@ -24,6 +29,7 @@ services:
     Acme\Bundle\CustomerGroupInventoryBundle\Provider\CustomerGroupContextResolver:
         arguments:
             - '@security.token_storage'
+            - '@oro_customer.provider.customer_user_relations_provider'
 
     # Event subscribers
     Acme\Bundle\CustomerGroupInventoryBundle\EventSubscriber\InventoryCacheInvalidationSubscriber:
