Fix: Remove default inventory status block from product page
- Removed product_view_headline_inventory_status_slot block
- Removed product_view_brand_inventory_status block
- Our custom widget now properly displays group-specific inventory
- Confirmed working with London group showing Out of Stock for 6BC45

--- a/config/config_dev.yml
+++ b/config/config_dev.yml
@@ -29,3 +29,12 @@ monolog:
 oro_message_queue:
     client:
         traceable_producer: true
+
+# Frontend session configuration
+oro_frontend:
+    session:
+        name: OROSFID
+        cookie_path: '/'
+        cookie_httponly: true
+        cookie_secure: false  # false for local dev with http
+        cookie_samesite: lax
