Fix related products inventory status display
- Handle product object with properties in related products view
- Extract product ID and SKU from product object properties
- Remove debug information after successful fix
- Add RelatedProductsInventoryProvider for future use
- Related products now correctly show customer group inventory status

--- a/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
+++ b/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
@@ -80,11 +80,19 @@ services:
         tags:
             - { name: twig.extension }
     
-    # Shopping list datagrid listener
-    Acme\Bundle\CustomerGroupInventoryBundle\EventListener\ShoppingListDatagridListener:
+    # Layout Data Provider for Related Products
+    Acme\Bundle\CustomerGroupInventoryBundle\Layout\DataProvider\RelatedProductsInventoryProvider:
         arguments:
             - '@Acme\Bundle\CustomerGroupInventoryBundle\Provider\CustomerGroupInventoryProvider'
             - '@doctrine'
         tags:
-            - { name: kernel.event_listener, event: oro_datagrid.datagrid.build.before, method: onBuildBefore }
-            - { name: kernel.event_listener, event: oro_datagrid.orm_datasource.result.after, method: onResultAfter }
+            - { name: layout.data_provider, alias: acme_related_products_inventory }
+    
+    # Shopping list datagrid listener - DISABLED due to hanging issue
+    # Acme\Bundle\CustomerGroupInventoryBundle\EventListener\ShoppingListDatagridListener:
+    #     arguments:
+    #         - '@Acme\Bundle\CustomerGroupInventoryBundle\Provider\CustomerGroupInventoryProvider'
+    #         - '@doctrine'
+    #     tags:
+    #         - { name: kernel.event_listener, event: oro_datagrid.datagrid.build.before, method: onBuildBefore }
+    #         - { name: kernel.event_listener, event: oro_datagrid.orm_datasource.result.after, method: onResultAfter }
