Document shopping list as known issue
- Shopping list uses complex datagrid system that bypasses our overrides
- Attempted multiple solutions but none work properly
- Document as known issue with technical details
- All other views work correctly (product, listing, related, search)

--- a/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
+++ b/src/Acme/Bundle/CustomerGroupInventoryBundle/Resources/config/services.yaml
@@ -89,11 +89,11 @@ services:
             - '@Acme\Bundle\CustomerGroupInventoryBundle\Provider\CustomerGroupInventoryProvider'
             - '@doctrine'
     
-    # Shopping list datagrid listener - DISABLED due to hanging issue
-    # Acme\Bundle\CustomerGroupInventoryBundle\EventListener\ShoppingListDatagridListener:
+    # Shopping list grid listener - DISABLED for now
+    # Acme\Bundle\CustomerGroupInventoryBundle\EventListener\ShoppingListGridListener:
     #     arguments:
     #         - '@Acme\Bundle\CustomerGroupInventoryBundle\Provider\CustomerGroupInventoryProvider'
     #         - '@doctrine'
+    #         - '@?logger'
     #     tags:
-    #         - { name: kernel.event_listener, event: oro_datagrid.datagrid.build.before, method: onBuildBefore }
-    #         - { name: kernel.event_listener, event: oro_datagrid.orm_datasource.result.after, method: onResultAfter }
+    #         - { name: kernel.event_listener, event: oro_datagrid.orm_datasource.result.after, method: onOrmResultAfter, priority: -100 }
